examples/fail/opt.xyz
5
Properties=species:S:1:pos:R:3:forces:R:3 energy=-175.65696 dipole="-0.14011478706777314 -0.28730818150598353 -0.005829441363889521" pbc="F F F"
C        0.05644968       1.72835569       0.01658199       0.01556147       0.02202094       0.00399253
H       -0.93279882       1.47807366      -0.37374626       0.00247639      -0.00467764       0.00350204
H        0.44019964       0.76923666       0.37916856      -0.02796725      -0.01442724      -0.00467704
H       -0.41392690      -1.16398634       0.48591567       0.01669110       0.01183068      -0.02073112
H       -0.42024002      -1.74626035       0.09648660      -0.00676176      -0.01474674       0.01791358
